Archive2/2e/38e1088aef5a66/output
main.cpp: In function 'int main()':
main.cpp:22:17: error: no matching function for call to 'Connect(main()::<lambda()>)'
     Connect([]{});
                 ^
main.cpp:22:17: note: candidate is:
main.cpp:5:3: note: template<class T> T Connect(typename std::enable_if<true, _Tp>::type)
 T Connect(typename std::enable_if<std::is_same<bool, bool>::value, T>::type func)
   ^
main.cpp:5:3: note:   template argument deduction/substitution failed:
main.cpp:22:17: note:   couldn't deduce template parameter 'T'
     Connect([]{});
                 ^
